--- a/templates/index.html
+++ b/templates/index.html
@@ -143,15 +143,19 @@
                     }
                 });
 
+                var payload = {
+                    email: email,
+                    password: password
+                }
+                console.log("Payload:", payload);
+
                 $.ajax({
-                    url: "http://localhost:3000/api/v1/user/login",
+                    url: "http://fundsaudit.com/api/v1/user/login",
                     type: "POST",
                     contentType: "application/json",
-                    data: JSON.stringify({
-                        email: email,
-                        password: password
-                    }),
+                    data: JSON.stringify(payload),
                     success: function (response) {
+                        sessionStorage.setItem("user_data", JSON.stringify(response));
                         console.log("Success:", response);
                         Swal.fire({
                             icon: "success",
