updated the api call in CO.html

--- a/templates/CO.html
+++ b/templates/CO.html
@@ -1398,7 +1398,7 @@
 
                     // Send via AJAX POST
                     $.ajax({
-                        url: "https://fundsaudit.com/api/v1/cosheet/register",
+                        url: "https://fundsaudit.com/api/v1/cosheet/add",
                         type: "POST",
                         contentType: "application/json",
                         data: JSON.stringify(jsonData),
