--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Fundsroom">
     <!--! The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags !-->
     <!--! BEGIN: Apps Title-->
-    <title>Fundsroom HR || Login Page</title>
+    <title>Fundsweb Sales || Login Page</title>
     <!--! END:  Apps Title-->
     <!--! BEGIN: Favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/FundsAuditLogo.png">
@@ -30,7 +30,7 @@
 			<script src="https:oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https:oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-        
+
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                             <img src="/assets/images/FundsAuditLogo.png" alt="Logo"
                                 class="position-absolute top-50 start-50 translate-middle opacity-25"
                                 style="width: 80px; z-index: 0;">
-                            Welcome to <br>FundsAudit HR Dashboard
+                            Welcome to <br>FundsWeb Sales Dashboard
                         </h2>
 
                         <p class="fs-12 fw-medium text-muted">Login to your account to get access to Dashboard.
@@ -163,7 +163,7 @@
                             title: "Login successful!",
                             confirmButtonColor: "#3085d6"
                         }).then(() => {
-                            window.location.href = "/templates/CO.html";
+                            window.location.href = "/templates/A.html";
                         });
                     },
                     error: function (xhr, status, error) {
