--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Fundsroom">
     <!--! The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags !-->
     <!--! BEGIN: Apps Title-->
-    <title>Fundsroom HR || Registration Page</title>
+    <title>Fundsweb Sales || Registration Page</title>
     <!--! END:  Apps Title-->
     <!--! BEGIN: Favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/FundsAuditLogo.png">
@@ -79,25 +79,25 @@
                             </div>
                             <div class="mt-3">
                                 <div class="col-lg-12 mb-4">
-                                    <label class="form-label">Gender<span class="text-danger">*</span></label>
+                                    <!-- <label class="form-label">Gender<span class="text-danger">*</span></label> -->
                                     <select class="form-control" id="gender" data-select2-selector="icon">
                                         <!-- <option value="static">Intern</option> -->
-                                        <option value="" selected></option>
+                                        <option value="" selected>Select your gender</option>
                                         <option value="1">Male</option>
                                         <option value="2">Female</option>
                                     </select>
                                 </div>
                             </div>
-                            <div class="mt-3">
+                            <!-- <div class="mt-3">
                                 <div class="col-lg-12 mb-4">
                                     <label class="form-label">User Type<span class="text-danger">*</span></label>
                                     <select class="form-control" id="userType" data-select2-selector="icon">
-                                        <!-- <option value="static">Intern</option> -->
+                                        
                                         <option value="1" selected>Employee</option>
                                     </select>
                                 </div>
-                            </div>
-                            <div class="mt-3">
+                            </div> -->
+                            <!-- <div class="mt-3">
                                 <div class="col-lg-12 mb-4">
                                     <label class="form-label">Position<span class="text-danger">*</span></label>
                                     <select class="form-control" id="position" data-select2-selector="icon">
@@ -110,7 +110,7 @@
                                         <option value="8">Business Development Executive</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="mb-3">
                                 <input type="tel" class="form-control" placeholder="Username" required>
                             </div> -->
@@ -184,14 +184,14 @@
                 const firstName = $("#firstName").val().trim();
                 const lastName = $("#lastName").val().trim();
                 const email = $("#email").val().trim();
-                const userType = $("#userType").val();
-                const position = $("#position").val();
+                // const userType = $("#userType").val();
+                // const position = $("#position").val();
                 const password = $("#password").val();
                 const confirmPassword = $("#confirmPassword").val();
                 const gender = $("#gender").val();
                 const phoneNumber = $("#phoneNumber").val().trim();
 
-                if (!firstName || !lastName || !email || !userType || !password || !confirmPassword || !gender || !phoneNumber) {
+                if (!firstName || !lastName || !email || !password || !confirmPassword || !gender || !phoneNumber) {
                     Swal.fire({
                         icon: "warning",
                         title: "All fields are required!",
@@ -230,10 +230,10 @@
                     firstName: firstName,
                     lastName: lastName,
                     email: email,
-                    type: userType,
+                    // type: userType,
                     password: password,
                     phoneNumber: phoneNumber,
-                    position: position,
+                    // position: position,
                     gender: gender
                 }
                 console.log("Payload:", payload);
